--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,19 @@
               uses: docker/build-push-action@v2
               with:
                 push: true
-                tags: akacarlson/nfra_actions:latest
+                tags: akacarlson/infra_actions:latest
+    deploy:
+        runs-on: ubuntu-latest
+        needs: build_and_push_to_docker_hub
+        steps:
+            - name: executing remote ssh commands to deploy
+              uses: appleboy/ssh-action@master
+              with:
+                host: ${{ secrets.HOST }}
+                username: ${{ secrets.USER }}
+                key: ${{ secrets.SSH_KEY }}
+                passphrase: ${{ secrets.PASSPHRASE }}
+                script: |
+                  sudo docker pull akacarlson/infra_actions
+                  sudo docker stop $(sudo docker ps -a -q)
+                  sudo docker run --rm -d -p 5000:5000 akacarlson/infra_actions
